--- a/index.html
+++ b/index.html
@@ -31,13 +31,34 @@
             allow="autoplay" allowfullscreen></iframe>
     </section>
     <section class="fotos-com-descricao">
-        <div class="foto">
+        <div class="foto foto-1">
 
         </div>
         <div class="descricao">
             <p>Os povos indígenas do Brasil compreendem um grande número de diferentes grupos étnicos que habitam o país
                 desde milênios antes do início da colonização portuguesa, que principiou no século XVI, fazendo parte do
                 grupo maior dos povos ameríndios.</p>
+        </div>
+
+        <div class="descricao">
+            <p>No momento da chegada dos portugueses ao Brasil, os povos nativos eram compostos por povos seminômades que subsistiam da caça, pesca, coleta e da agricultura itinerante, desenvolvendo culturas diferenciadas.</p>
+        </div>
+        <div class="foto foto-2">
+
+        </div>
+        <div class="foto foto-3">
+
+        </div>
+        <div class="descricao">
+            <p>Os povos indígenas do Brasil compreendem um grande número de diferentes grupos étnicos que habitam o país
+                desde milênios antes do início da colonização portuguesa, que principiou no século XVI, fazendo parte do
+                grupo maior dos povos ameríndios.</p>
+        </div>
+        <div class="descricao">
+            <p>Apesar de protegida por muitas leis, a população indígena foi amplamente exterminada pelos conquistadores diretamente e pelas doenças que eles trouxeram, caindo de uma população de milhões para cerca de 150 mil em meados do século XX, quando continuava caindo.</p>
+        </div>
+        <div class="foto foto-4">
+
         </div>
     </section>
     <footer class="rodape">
