--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Projeto indigena</title>
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/responsive.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,6 +19,13 @@
         <a href="./index.html" class="logo">
             <img src="./src/img/logo.png" alt="logo">
         </a>
+        <input type="checkbox" id="check">
+
+        <div class="menu">
+            <label for="check">
+                <p class="menu-hamburguer"></p>
+            </label>
+        </div>
         <nav>
             <ul>
                 <li><a href="">exemplo</a></li>
@@ -26,9 +34,8 @@
             </ul>
         </nav>
     </header>
-    <section class="video">
-        <iframe src="https://drive.google.com/file/d/1lyVAJofI0vzSYRVXsjJ7QjAKae2zQJvD/preview" width="640" height="480"
-            allow="autoplay" allowfullscreen></iframe>
+    <section class="titulo">
+        <h1>Cultura indígena no Brasil</h1>
     </section>
     <section class="fotos-com-descricao">
         <div class="foto foto-1">
@@ -60,6 +67,9 @@
         <div class="foto foto-4">
 
         </div>
+    </section>
+    <section class="video">
+        <iframe src="https://drive.google.com/file/d/1lyVAJofI0vzSYRVXsjJ7QjAKae2zQJvD/preview" width="640" height="480" allow="autoplay" allowfullscreen></iframe>
     </section>
     <footer class="rodape">
         <h1>rodape aqui</h1>
