--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
         <div class="foto foto-1">
 
         </div>
-        <div class="descricao">
+        <div class="descricao desc-1">
             <p>Os povos indígenas do Brasil compreendem um grande número de diferentes grupos étnicos que habitam o país
                 desde milênios antes do início da colonização portuguesa, que principiou no século XVI, fazendo parte do
                 grupo maior dos povos ameríndios.</p>
         </div>
 
-        <div class="descricao">
+        <div class="descricao desc-2">
             <p>No momento da chegada dos portugueses ao Brasil, os povos nativos eram compostos por povos seminômades que subsistiam da caça, pesca, coleta e da agricultura itinerante, desenvolvendo culturas diferenciadas.</p>
         </div>
         <div class="foto foto-2">
@@ -56,12 +56,12 @@
         <div class="foto foto-3">
 
         </div>
-        <div class="descricao">
+        <div class="descricao desc-3">
             <p>Os povos indígenas do Brasil compreendem um grande número de diferentes grupos étnicos que habitam o país
                 desde milênios antes do início da colonização portuguesa, que principiou no século XVI, fazendo parte do
                 grupo maior dos povos ameríndios.</p>
         </div>
-        <div class="descricao">
+        <div class="descricao desc-4">
             <p>Apesar de protegida por muitas leis, a população indígena foi amplamente exterminada pelos conquistadores diretamente e pelas doenças que eles trouxeram, caindo de uma população de milhões para cerca de 150 mil em meados do século XX, quando continuava caindo.</p>
         </div>
         <div class="foto foto-4">
@@ -70,6 +70,18 @@
     </section>
     <section class="video">
         <iframe src="https://drive.google.com/file/d/1lyVAJofI0vzSYRVXsjJ7QjAKae2zQJvD/preview" width="640" height="480" allow="autoplay" allowfullscreen></iframe>
+    </section>
+    <section class="tribos">
+       <div class="foto-das-tribos">
+          
+       </div>
+
+       <div class="descricao-das-tribos">
+          <p>Indígenas respectivamente dos povos: <span>Ashaninka, Assurini, Bororo, Kayapó, Guajajara, Kaiowá, Kuikuro, Kaingang, Zo'è, Yanomami, Xacriabá, Yawalapiti, Wauja, Waiwai, Terena e Rikbaktsa</span></p>
+       </div>
+    </section>
+    <section class="localizacao">
+       <img src="./src/img/localização dos povos indigenas.jpg" alt="local">
     </section>
     <footer class="rodape">
         <h1>rodape aqui</h1>
