--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/9256129f72.js" crossorigin="anonymous"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -48,7 +53,9 @@
         </div>
 
         <div class="descricao desc-2">
-            <p>No momento da chegada dos portugueses ao Brasil, os povos nativos eram compostos por povos seminômades que subsistiam da caça, pesca, coleta e da agricultura itinerante, desenvolvendo culturas diferenciadas.</p>
+            <p>No momento da chegada dos portugueses ao Brasil, os povos nativos eram compostos por povos seminômades
+                que subsistiam da caça, pesca, coleta e da agricultura itinerante, desenvolvendo culturas diferenciadas.
+            </p>
         </div>
         <div class="foto foto-2">
 
@@ -62,29 +69,37 @@
                 grupo maior dos povos ameríndios.</p>
         </div>
         <div class="descricao desc-4">
-            <p>Apesar de protegida por muitas leis, a população indígena foi amplamente exterminada pelos conquistadores diretamente e pelas doenças que eles trouxeram, caindo de uma população de milhões para cerca de 150 mil em meados do século XX, quando continuava caindo.</p>
+            <p>Apesar de protegida por muitas leis, a população indígena foi amplamente exterminada pelos conquistadores
+                diretamente e pelas doenças que eles trouxeram, caindo de uma população de milhões para cerca de 150 mil
+                em meados do século XX, quando continuava caindo.</p>
         </div>
         <div class="foto foto-4">
 
         </div>
     </section>
     <section class="video">
-        <iframe src="https://drive.google.com/file/d/1lyVAJofI0vzSYRVXsjJ7QjAKae2zQJvD/preview" width="640" height="480" allow="autoplay" allowfullscreen></iframe>
+        <iframe src="https://drive.google.com/file/d/1lyVAJofI0vzSYRVXsjJ7QjAKae2zQJvD/preview" width="640" height="480"
+            allow="autoplay" allowfullscreen></iframe>
     </section>
     <section class="tribos">
-       <div class="foto-das-tribos">
-          
-       </div>
+        <div class="foto-das-tribos">
 
-       <div class="descricao-das-tribos">
-          <p>Indígenas respectivamente dos povos: <span>Ashaninka, Assurini, Bororo, Kayapó, Guajajara, Kaiowá, Kuikuro, Kaingang, Zo'è, Yanomami, Xacriabá, Yawalapiti, Wauja, Waiwai, Terena e Rikbaktsa</span></p>
-       </div>
+        </div>
+
+        <div class="descricao-das-tribos">
+            <p>Indígenas respectivamente dos povos: <span>Ashaninka, Assurini, Bororo, Kayapó, Guajajara, Kaiowá,
+                    Kuikuro, Kaingang, Zo'è, Yanomami, Xacriabá, Yawalapiti, Wauja, Waiwai, Terena e Rikbaktsa</span>
+            </p>
+        </div>
     </section>
     <section class="localizacao">
-       <img src="./src/img/localização dos povos indigenas.jpg" alt="local">
+        <img src="./src/img/localização dos povos indigenas.jpg" alt="local">
     </section>
     <footer class="rodape">
-        <h1>rodape aqui</h1>
+        <h2>Julia Paulino Rodrigues</h2>
+        <a href="https://www.instagram.com/julixx_sz008/"><i class="fa-brands fa-instagram fa-fw"></i></a>
+        <a href="mailto:juliapaulino0512@gmail.com?subject=&body=" class="email"><i
+                class="fa-regular fa-envelope"></i></a>
     </footer>
 </body>
 
