--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         </div>
         <nav>
             <ul>
-                <li><a href="">exemplo</a></li>
-                <li><a href="">exemplo</a></li>
-                <li><a href="">exemplo</a></li>
+                <li><a href="#">Armas indígenas</a></li>
+                <li><a href="#">comidas típicas</a></li>
+                <li><a href="#">Arte indígena</a></li>
             </ul>
         </nav>
     </header>
@@ -64,14 +64,12 @@
 
         </div>
         <div class="descricao desc-3">
-            <p>Os povos indígenas do Brasil compreendem um grande número de diferentes grupos étnicos que habitam o país
-                desde milênios antes do início da colonização portuguesa, que principiou no século XVI, fazendo parte do
-                grupo maior dos povos ameríndios.</p>
-        </div>
-        <div class="descricao desc-4">
             <p>Apesar de protegida por muitas leis, a população indígena foi amplamente exterminada pelos conquistadores
                 diretamente e pelas doenças que eles trouxeram, caindo de uma população de milhões para cerca de 150 mil
                 em meados do século XX, quando continuava caindo.</p>
+        </div>
+        <div class="descricao desc-4">
+            <p>No censo do Instituto Brasileiro de Geografia e Estatística de 2022, 1 227 642 brasileiros se autodeclararam indígenas, embora milhões de outros tenham algum grau de ascendência indígena</p>
         </div>
         <div class="foto foto-4">
 
