--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Armas indígenas</a></li>
+                <li><a href="./src/paginas/armas-indigenas.html">Armas indígenas</a></li>
                 <li><a href="#">comidas típicas</a></li>
                 <li><a href="#">Arte indígena</a></li>
             </ul>
