--- a/src/paginas/comidas-tipicas.html
+++ b/src/paginas/comidas-tipicas.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Armas Indigenas</title>
+    <title>Comidas Típicas</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="arma.css">
     <link rel="stylesheet" href="../css/responsive.css">
+    <link rel="stylesheet" href="./comidas-tipicas.css">
 
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
@@ -19,7 +19,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
 </head>
-
 <body>
     <header>
         <a href="https://projeto-indigena.vercel.app" class="logo">
@@ -41,54 +40,40 @@
             </ul>
         </nav>
     </header>
-    <section class="titulo-arma">
-        <h1>Armas indígenas</h1>
+    <section class="comida-inicio">
+       <h1>comidas típicas indígenas</h1>
     </section>
-    <section class="informacao-arma">
-        <div class="armas"></div>
+    <section class="culinaria">
+         <div class="comida milho">
+               <div class="img"></div>
+               <div class="descricao">Bolo de milho</div>
+         </div>
+
+         <div class="comida pamonha">
+            <div class="img"></div>
+            <div class="descricao">Pamonha</div>
+      </div>
+      <div class="comida tapioca">
+        <div class="img"></div>
+        <div class="descricao">Tapioca</div>
+  </div>
+  <div class="comida mandioca">
+    <div class="img"></div>
+    <div class="descricao">Mandioca</div>
+</div>
+<div class="comida muqueca-de-paixe">
+    <div class="img"></div>
+    <div class="descricao">Moqueca de peixe</div>
+</div>
+<div class="comida tacaca">
+    <div class="img"></div>
+    <div class="descricao">Tacacá</div>
+</div>
+    </section>
+    <section class="comidas-tipicas">
+        <div class="imagem"></div>
         <div class="descricao">
-            <p>As armas eram instrumentos fundamentais para a prática de caça, pesca e guerra. No seu fabrico, os índios brasileiros, nomeadamente os Índios Mura, usavam preferencialmente materiais de origem vegetal, animal e rochoso, um pouco à semelhança de povos europeus de há mais de 4000 a.C</p>
-        </div>
-    </section>
-    <section class="armas">
-        <div class="tipo-de-arma">
-            <div class="imagem machado"></div>
-            <div class="descricao">
-                <h1>Machado</h1>
-                <p></p>
-            </div>
-        </div>
-
-        <div class="tipo-de-arma">
-            <div class="imagem borduna"></div>
-            <div class="descricao">
-                <h1>Borduna</h1>
-                <p></p>
-            </div>
-        </div>
-
-
-        <div class="tipo-de-arma">
-            <div class="imagem lanca"></div>
-            <div class="descricao">
-                <h1>Lança</h1>
-                <p></p>
-            </div>
-        </div>
-
-
-        <div class="tipo-de-arma">
-            <div class="imagem flecha"></div>
-            <div class="descricao">
-                <h1>Arco e flexa indígena</h1>
-                <p></p>
-            </div>
-        </div>
-    </section>
-    <section class="informacao-arma">
-        <div class="armas-1"></div>
-        <div class="descricao-1">
-            <p>Pontas de flexas antigas usadas pelas tribos da época</p>
+            <p>A culinária indígena no Brasil é fruto de uma mistura de ingredientes de mais de duzentas etnias indígenas oficialmente reconhecidas no Brasil.Os povos indígenas passam por modificações nos costumes alimentares nativos, a caminho da ocidentalização de seus hábitos alimentares. São transformações nutricionais que levam ao empobrecimento da dieta, crescimento da ingestão de gorduras e açúcares e simplificação da diversidade alimentar.</p>
         </div>
     </section>
     <footer class="rodape">
@@ -98,5 +83,4 @@
                 class="fa-regular fa-envelope"></i></a>
     </footer>
 </body>
-
 </html>
