--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <nav>
             <ul>
                 <li><a href="./src/paginas/armas-indigenas.html">Armas indígenas</a></li>
-                <li><a href="#">comidas típicas</a></li>
+                <li><a href="./src/paginas/comidas-tipicas.html">comidas típicas</a></li>
                 <li><a href="#">Arte indígena</a></li>
             </ul>
         </nav>
