--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <ul>
                 <li><a href="./src/paginas/armas-indigenas.html">Armas indígenas</a></li>
                 <li><a href="./src/paginas/comidas-tipicas.html">comidas típicas</a></li>
-                <li><a href="#">Arte indígena</a></li>
+                <li><a href="./src/paginas/arte-indigena.html">Arte indígena</a></li>
             </ul>
         </nav>
     </header>
