--- a/src/paginas/arte-indigena.html
+++ b/src/paginas/arte-indigena.html
@@ -36,7 +36,7 @@
                 <li class="home"><a href="https://projeto-indigena.vercel.app">Inicio</a></li>
                 <li><a href="./armas-indigenas.html">Armas indígenas</a></li>
                 <li><a href="./comidas-tipicas.html">comidas típicas</a></li>
-                <li><a href="#">Arte indígena</a></li>
+                <li><a href="./arte-indigena.html">Arte indígena</a></li>
             </ul>
         </nav>
     </header>
