--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
         </div>
         <nav>
             <ul>
+                <li class="home"><a href="https://projeto-indigena.vercel.app">Inicio</a></li>
                 <li><a href="./src/paginas/armas-indigenas.html">Armas indígenas</a></li>
                 <li><a href="./src/paginas/comidas-tipicas.html">comidas típicas</a></li>
                 <li><a href="./src/paginas/arte-indigena.html">Arte indígena</a></li>
+                <li><a href="./src/paginas/instrumentos-indigena.html">instrumentos</a></li>
             </ul>
         </nav>
     </header>
