--- a/src/paginas/arte-indigena.html
+++ b/src/paginas/arte-indigena.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <header>
-        <a href="https://projeto-indigena.vercel.app" class="logo">
+        <a href="./index.html" class="logo">
             <img src="../img/logo.png" alt="logo">
         </a>
         <input type="checkbox" id="check">
@@ -37,6 +37,7 @@
                 <li><a href="./armas-indigenas.html">Armas indígenas</a></li>
                 <li><a href="./comidas-tipicas.html">comidas típicas</a></li>
                 <li><a href="./arte-indigena.html">Arte indígena</a></li>
+                <li><a href="./instrumentos-indigena.html">instrumentos</a></li>
             </ul>
         </nav>
     </header>
@@ -76,10 +77,6 @@
         <div class="descricao"><p>A arte indígena é muito rica, composta por diversos elementos carregados de simbologias antigas e sabedorias sagradas recebidas de seus antepassados</p></div>
         <div class="descricao"><p>Peça de pedra polida em forma de peixe da cultura Sambaqui</p></div>
         <div class="imagem"></div>
-    </section>
-    <section class="museo-de-arte">
-        <h2>Acesse o site museo de arte </h2>
-         <a href="https://www.tourvirtual360.com.br/mai/mai.html">Clicando aqui</a>
     </section>
     <footer class="rodape">
         <h2>Julia Paulino Rodrigues</h2>
