--- a/src/paginas/comidas-tipicas.html
+++ b/src/paginas/comidas-tipicas.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <header>
-        <a href="https://projeto-indigena.vercel.app" class="logo">
+        <a href="./index.html" class="logo">
             <img src="../img/logo.png" alt="logo">
         </a>
         <input type="checkbox" id="check">
@@ -34,9 +34,10 @@
         <nav>
             <ul>
                 <li class="home"><a href="https://projeto-indigena.vercel.app">Inicio</a></li>
-                <li><a href="./armas-indigenas.html">Armas indígenas</a></li>
-                <li><a href="./comidas-tipicas.html">comidas típicas</a></li>
-                <li><a href="./arte-indigena.html">Arte indígena</a></li>
+                <li><a href="../paginas/armas-indigenas.html">Armas indígenas</a></li>
+                <li><a href="../paginas/comidas-tipicas.html">comidas típicas</a></li>
+                <li><a href="../paginas/arte-indigena.html">Arte indígena</a></li>
+                <li><a href="../paginas/instrumentos-indigena.html">instrumentos</a></li>
             </ul>
         </nav>
     </header>
