--- a/src/paginas/arte-indigena.html
+++ b/src/paginas/arte-indigena.html
@@ -78,6 +78,10 @@
         <div class="descricao"><p>Peça de pedra polida em forma de peixe da cultura Sambaqui</p></div>
         <div class="imagem"></div>
     </section>
+    <section class="museo-de-arte">
+        <h2>Acesse o site museo de arte </h2>
+         <a href="https://www.tourvirtual360.com.br/mai/mai.html">Clicando aqui</a>
+    </section>
     <footer class="rodape">
         <h2>Julia Paulino Rodrigues</h2>
         <a href="https://www.instagram.com/julixx_sz008/"><i class="fa-brands fa-instagram fa-fw"></i></a>
