--- a/src/paginas/comidas-tipicas.html
+++ b/src/paginas/comidas-tipicas.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <header>
-        <a href="./index.html" class="logo">
+        <a href="https://projeto-indigena.vercel.app" class="logo">
             <img src="../img/logo.png" alt="logo">
         </a>
         <input type="checkbox" id="check">
