--- a/src/paginas/instrumentos-indigena.html
+++ b/src/paginas/instrumentos-indigena.html
@@ -34,9 +34,9 @@
             <ul>
                 <li class="home"><a href="https://projeto-indigena.vercel.app">Inicio</a></li>
                 <li><a href="./armas-indigenas.html">Armas indígenas</a></li>
-                <li><a href="./comidas-tipicas.html">comidas típicas</a></li>
+                <li><a href="./comidas-tipicas.html">Comidas típicas</a></li>
                 <li><a href="./arte-indigena.html">Arte indígena</a></li>
-                <li><a href="./instrumentos-indigena.html">instrumentos</a></li>
+                <li><a href="./instrumentos-indigena.html">Instrumentos</a></li>
             </ul>
         </nav>
     </header>
