--- a/src/paginas/armas-indigenas.html
+++ b/src/paginas/armas-indigenas.html
@@ -89,7 +89,8 @@
     <section class="informacao-arma">
         <div class="armas-1"></div>
         <div class="descricao-1">
-            <p>Pontas de flexas antigas usadas pelas tribos da época</p>
+            <p>Pontas de flexas antigas usadas pelas tribos da época No curso de uma escavação arqueológica na região do Mediterrâneo, no ano de 5000 a.C., uma equipe de arqueólogos desenterra uma ponta de flecha excepcionalmente preservada, remontando ao período do Neolítico. Esta ponta de flecha, feita de obsidiana, é uma obra-prima da arte e da engenharia da época.</p>
+            
         </div>
     </section>
     <footer class="rodape">
