--- a/src/paginas/armas-indigenas.html
+++ b/src/paginas/armas-indigenas.html
@@ -18,6 +18,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="//upload.wikimedia.org/wikipedia/commons/thumb/7/74/Fleche_Cartailhac_MHNT_PRE_2009.0.232.2_simple.jpg/220px-Fleche_Cartailhac_MHNT_PRE_2009.0.232.2_simple.jpg" type="image/x-icon">
 </head>
 
 <body>
