remocao das abas

--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
         <nav>
             <ul>
                 <li class="home"><a href="https://projeto-indigena.vercel.app">Inicio</a></li>
+                <li><a href="./src/paginas/armas-indigenas.html">Armas indígenas</a></li>
                 <li><a href="./src/paginas/comidas-tipicas.html">Comidas típicas</a></li>
                 <li><a href="./src/paginas/arte-indigena.html">Arte indígena</a></li>
-              
+                <li><a href="./src/paginas/instrumentos-indigena.html">Instrumentos</a></li>
             </ul>
         </nav>
     </header>
