--- a/src/paginas/arte-indigena.html
+++ b/src/paginas/arte-indigena.html
@@ -22,8 +22,8 @@
 </head>
 <body>
     <header>
-        <a href="./index.html" class="logo">
-            <img src="../img/logo.png" alt="logo">
+        <a href="" class="logo">
+            <img src="https://projeto-indigena.vercel.app" alt="logo">
         </a>
         <input type="checkbox" id="check">
 
