--- a/src/paginas/arte-indigena.html
+++ b/src/paginas/arte-indigena.html
@@ -21,7 +21,7 @@
     <link rel="shortcut icon" href="//upload.wikimedia.org/wikipedia/commons/thumb/7/74/Fleche_Cartailhac_MHNT_PRE_2009.0.232.2_simple.jpg/220px-Fleche_Cartailhac_MHNT_PRE_2009.0.232.2_simple.jpg" type="image/x-icon">
 </head>
 <body>
-    <header>
+    <header>                                                                  
         <a href="https://projeto-indigena.vercel.app" class="logo">
             <img src="../img/logo.png" alt="logo">
         </a>
@@ -45,7 +45,23 @@
     <section class="arte-inicio">
         <h1>Arte indígena</h1>
     </section>
-    <section class="artes">
+    <section class="informacoes">
+            <h1>Cerâmicas Marajoara</h1>
+            <p>Os primeiros registros de cerâmicas encontradas na região por historiadores e arqueólogos possuíam algumas características, dentre elas: a representação de animais em formas humanas (zoomorfismo); representações femininas, pois questões como fertilidade eram importantes para os habitantes da Ilha de Marajó; e o antropomorfismo, que atribui a divindades características do ser humano.</p>
+    </section>
+    <section class="imagem-ceramica">
+        <img src="./img/part1.jpg" alt="ceramica">
+    </section>
+    <section class="segundo-texto">
+          <p>Os primeiros registros de cerâmicas encontradas na região por historiadores e arqueólogos possuíam algumas características, dentre elas: a representação de animais em formas humanas (zoomorfismo); representações femininas, pois questões como fertilidade eram importantes para os habitantes da Ilha de Marajó; e o antropomorfismo, que atribui a divindades características do ser humano.</p>
+    </section>
+    <section class="imagem-com-descricao">
+        <img src="./img/part 2.jpg" alt="desenho-desconhecido">
+        <div class="info">
+            <p>Reprodução: Internet</p>
+        </div>
+    </section>
+    <!-- <section class="artes">
         <div class="arte">
            <div class="imagem ceramica"></div>
            <div class="descricao"><p>Cerâmica</p></div>
@@ -72,13 +88,13 @@
            <div class="imagem pintura-corporal"></div>
            <div class="descricao"><p>Pintura corporal</p></div>
         </div>
-    </section>
-    <section class="esposicao">
+    </section> -->
+    <!-- <section class="esposicao">
         <div class="imagem img-1"></div>
         <div class="descricao"><p>A arte indígena é muito rica, composta por diversos elementos carregados de simbologias antigas e sabedorias sagradas recebidas de seus antepassados</p></div>
         <div class="descricao"><p>Peça de pedra polida em forma de peixe da cultura Sambaqui</p></div>
         <div class="imagem"></div>
-    </section>
+    </section> -->
     <section class="museo-de-arte">
         <h2>Acesse o site museo de arte </h2>
          <a href="https://www.tourvirtual360.com.br/mai/mai.html">Clicando aqui</a>
