--- a/index.html
+++ b/index.html
@@ -73,16 +73,15 @@
         </div>
         <div class="descricao desc-4">
             <p>No censo do Instituto Brasileiro de Geografia e Estatística de 2022, 1 227 642 brasileiros se autodeclararam indígenas, embora milhões de outros tenham algum grau de ascendência indígena</p>
-        </div>
-        <div class="foto foto-4">
-
+        </div>            
+        <div class="foto foto-4">                           
         </div>
     </section>
     <section class="video">
         <iframe src="https://drive.google.com/file/d/1lyVAJofI0vzSYRVXsjJ7QjAKae2zQJvD/preview" width="640" height="480"
             allow="autoplay" allowfullscreen></iframe>
     </section>
-    <section class="tribos">
+    <!-- <section class="tribos">
         <div class="foto-das-tribos">
 
         </div>
@@ -91,7 +90,7 @@
                     Kuikuro, Kaingang, Zo'è, Yanomami, Xacriabá, Yawalapiti, Wauja, Waiwai, Terena e Rikbaktsa</span>
             </p>
         </div>
-    </section>
+    </section> -->
     <section class="localizacao">
         <img src="./src/img/localização dos povos indigenas.jpg" alt="local">
     </section>
