--- a/src/paginas/arte-indigena.html
+++ b/src/paginas/arte-indigena.html
@@ -61,6 +61,19 @@
             <p>Reprodução: Internet</p>
         </div>
     </section>
+    <section class="texto-sobre-historia">
+        <p>Os traços da cerâmica marajoara são bastante detalhistas. Para isso, as tribos indígenas aplicavam técnicas que combinavam cores que tornavam as peças sofisticadas. Essas cores eram extraídas de elementos da natureza, como:caulim;</p>
+    </section>
+    <section class="vaso-com-rosto">
+        <img src="./img/part 3.jpg" alt="vaso com rosto">
+    </section>
+    <section class="texto-sobre-o-vaso-com-rosto">
+         <p><span>Legado</span>
+                <br><br>
+            Até os dias atuais, a cerâmica marajoara é produzida e se também ganhou novos significados, servindo como objetos de decoração e são vendidas em feiras de artesanato e comércios locais. 
+            <br><br>
+            Peças históricas podem ser encontradas em museus da região e inclusive internacionais. São eles: Museu Paraense Emílio Goeldi, Museu do Marajó, no Museu Histórico Nacional (RJ), no Museu de Arqueologia e Etnologia da USP, no Museu Universitário Professor Oswaldo Rodrigues Cabral e por fim, no Museu Americano de História Natural, em Nova York</p>
+    </section>
     <!-- <section class="artes">
         <div class="arte">
            <div class="imagem ceramica"></div>
