--- a/src/paginas/arte-indigena.html
+++ b/src/paginas/arte-indigena.html
@@ -64,7 +64,7 @@
         </div>
     </section>
     <section class="texto-sobre-historia">
-        <p>Os traços da cerâmica marajoara são bastante detalhistas. Para isso, as tribos indígenas aplicavam técnicas que combinavam cores que tornavam as peças sofisticadas. Essas cores eram extraídas de elementos da natureza, como:caulim;</p>
+        <p>Os traços da cerâmica marajoara são bastante detalhistas. Para isso, as tribos indígenas aplicavam técnicas que combinavam cores que tornavam as peças sofisticadas. Essas cores eram extraídas de elementos da natureza, como:urucum;caulim;jenipapo;carvão;fuligem </p>
     </section>
     <section class="vaso-com-rosto">
         <img src="./img/part 3.jpg" alt="vaso com rosto">
@@ -75,6 +75,30 @@
             Até os dias atuais, a cerâmica marajoara é produzida e se também ganhou novos significados, servindo como objetos de decoração e são vendidas em feiras de artesanato e comércios locais. 
             <br><br>
             Peças históricas podem ser encontradas em museus da região e inclusive internacionais. São eles: Museu Paraense Emílio Goeldi, Museu do Marajó, no Museu Histórico Nacional (RJ), no Museu de Arqueologia e Etnologia da USP, no Museu Universitário Professor Oswaldo Rodrigues Cabral e por fim, no Museu Americano de História Natural, em Nova York</p>
+    </section>
+    <section class="jarro-com-copos">
+       <img src="./img/part 4.jpg" alt="jarro-com-copos">
+       <div class="info">
+        <p>Jarro de cerâmica 
+             <br><br>
+            Fonte: Internet</p>
+       </div>
+    </section>
+    <section class="peixe">
+        <img src="./img/part 5.jpg" alt="peixe">
+        <div class="info">
+         <p>Peixe de cerâmica 
+            <br><br>
+            Fonte: Internet</p>
+        </div>
+    </section>
+    <section class="tartaruga">
+        <img src="./img/part 6.jpg" alt="tartaruga">
+        <div class="info">
+         <p>Tartaruga de cerâmica 
+             <br><br>
+            Fonte : Internet</p>
+        </div>
     </section>
     <!-- <section class="artes">
         <div class="arte">
