--- a/src/paginas/arte-indigena.html
+++ b/src/paginas/arte-indigena.html
@@ -49,7 +49,7 @@
             <ul>
                 <li class="home"><a href="https://projeto-indigena.vercel.app">Inicio</a></li>
 
-                <li><a href="./comidas-tipicas.html">Comidas típicas</a></li>
+                <li><a href="./comidas-tipicas.html">Culinária indígena do Brasil</a></li>
                 <li><a href="./arte-indigena.html">Arte indígena</a></li>
 
             </ul>
