--- a/src/paginas/comidas-tipicas.html
+++ b/src/paginas/comidas-tipicas.html
@@ -35,7 +35,7 @@
         <nav>
             <ul>
                 <li class="home"><a href="https://projeto-indigena.vercel.app">Inicio</a></li>
-                <li><a href="../paginas/comidas-tipicas.html">Comidas típicas</a></li>
+                <li><a href="../paginas/comidas-tipicas.html">Culinária indígena do Brasil</a></li>
                 <li><a href="../paginas/arte-indigena.html">Arte indígena</a></li>
                 
             </ul>
@@ -44,7 +44,7 @@
     <section class="comida-inicio">                                 
        <h1>comidas típicas indígenas</h1>
     </section>
-    <section class="culinaria">
+    <!-- <section class="culinaria">
          <div class="comida milho">
                <div class="img"></div>
                <div class="descricao">Bolo de milho</div>
@@ -70,13 +70,13 @@
     <div class="img"></div>
     <div class="descricao">Tacacá</div>
 </div>
-    </section>
-    <section class="comidas-tipicas">
+    </section> -->
+    <!-- <section class="comidas-tipicas">
         <div class="imagem"></div>
         <div class="descricao">
             <p>A culinária indígena no Brasil é fruto de uma mistura de ingredientes de mais de duzentas etnias indígenas oficialmente reconhecidas no Brasil.Os povos indígenas passam por modificações nos costumes alimentares nativos, a caminho da ocidentalização de seus hábitos alimentares. São transformações nutricionais que levam ao empobrecimento da dieta, crescimento da ingestão de gorduras e açúcares e simplificação da diversidade alimentar.</p>
         </div>
-    </section>
+    </section> -->
     <footer class="rodape">
         <h2>Julia Paulino Rodrigues</h2>
         <a href="https://www.instagram.com/julixx_sz008/"><i class="fa-brands fa-instagram fa-fw"></i></a>
