--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="//upload.wikimedia.org/wikipedia/commons/thumb/7/74/Fleche_Cartailhac_MHNT_PRE_2009.0.232.2_simple.jpg/220px-Fleche_Cartailhac_MHNT_PRE_2009.0.232.2_simple.jpg" type="image/x-icon">
+    <link rel="shortcut icon"
+        href="//upload.wikimedia.org/wikipedia/commons/thumb/7/74/Fleche_Cartailhac_MHNT_PRE_2009.0.232.2_simple.jpg/220px-Fleche_Cartailhac_MHNT_PRE_2009.0.232.2_simple.jpg"
+        type="image/x-icon">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jacques+Francois+Shadow&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -35,10 +41,10 @@
         <nav>
             <ul>
                 <li class="home"><a href="https://projeto-indigena.vercel.app">Inicio</a></li>
-             
-                <li><a href="./src/paginas/comidas-tipicas.html">Comidas típicas</a></li>
+
+                <li><a href="./src/paginas/comidas-tipicas.html">Culinária indígena do Brasil</a></li>
                 <li><a href="./src/paginas/arte-indigena.html">Arte indígena</a></li>
-                
+
             </ul>
         </nav>
     </header>
@@ -72,9 +78,10 @@
                 em meados do século XX, quando continuava caindo.</p>
         </div>
         <div class="descricao desc-4">
-            <p>No censo do Instituto Brasileiro de Geografia e Estatística de 2022, 1 227 642 brasileiros se autodeclararam indígenas, embora milhões de outros tenham algum grau de ascendência indígena</p>
-        </div>            
-        <div class="foto foto-4">                           
+            <p>No censo do Instituto Brasileiro de Geografia e Estatística de 2022, 1 227 642 brasileiros se
+                autodeclararam indígenas, embora milhões de outros tenham algum grau de ascendência indígena</p>
+        </div>
+        <div class="foto foto-4">
         </div>
     </section>
     <section class="video">
