--- a/src/paginas/comidas-tipicas.html
+++ b/src/paginas/comidas-tipicas.html
@@ -69,7 +69,7 @@
         <img src="./img/comida part 1.jpg" alt="mulheres indigenas">
     </section>
     <section class="texto-1">
-        <p><span>Quais eram os principais alimentos dos índios antigamente?</span> 
+        <p><span>Quais eram os principais alimentos dos índigenas antigamente?</span> 
              <br><br>
             Os primeiros habitantes das terras brasileiras tinham uma alimentação baseada no que a natureza oferecia. Portanto, os indígenas comiam milho, aipim, mandioca, coco, frutas, peixes e carnes, que eram obtidas através da atividade de caça</p>
     </section>
