--- a/src/paginas/arte-indigena.html
+++ b/src/paginas/arte-indigena.html
@@ -92,7 +92,7 @@
     <section class="texto-sobre-historia">
         <p>Os traços da cerâmica marajoara são bastante detalhistas. Para isso, as tribos indígenas aplicavam técnicas
             que combinavam cores que tornavam as peças sofisticadas. Essas cores eram extraídas de elementos da
-            natureza, como:urucum;caulim;jenipapo;carvão;fuligem </p>
+            natureza, como: <br> urucum <br> caulim <br> jenipapo <br> carvão <br> fuligem </p>
     </section>
     <section class="vaso-com-rosto">
         <img src="./img/part 3.jpg" alt="vaso com rosto">
