--- a/src/paginas/arte-indigena.html
+++ b/src/paginas/arte-indigena.html
@@ -84,7 +84,7 @@
     <section class="imagem-com-descricao">
         <img src="./img/part 2.jpg" alt="desenho-desconhecido">
         <div class="info">
-            <p>Nome do objeto: Urna</p>
+            <p> Urna</p>
             <br>
             <p>Reprodução: Internet</p>
         </div>
