--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto indigena</title>
+
+    <meta name="description" content="Uma plataforma dedicada ao apoio e celebração das culturas, tradições e comunidades indígenas.">
+    <meta property="og:title" content="Projeto indigena">
+    <meta property="og:description" content="Descrição do seu site aqui.">
+    <meta property="og:image" content="./src/img/logo.png">
+    <meta property="og:url" content="https://projeto-indigena.vercel.app/">
+
+
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/style.css">
     <link rel="stylesheet" href="./src/css/responsive.css">
