--- a/src/paginas/arte-indigena.html
+++ b/src/paginas/arte-indigena.html
@@ -9,7 +9,11 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/responsive.css">
     <link rel="stylesheet" href="./arte-indigena.css">
-
+    <meta name="description" content="Uma plataforma dedicada ao apoio e celebração das culturas, tradições e comunidades indígenas.">
+    <meta property="og:title" content="Projeto indigena">
+    <meta property="og:description" content="Descrição do seu site aqui.">
+    <meta property="og:image" content="./src/img/logo.png">
+    <meta property="og:url" content="https://projeto-indigena.vercel.app/">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -84,7 +88,7 @@
     <section class="imagem-com-descricao">
         <img src="./img/part 2.jpg" alt="desenho-desconhecido">
         <div class="info">
-            <p> Urna</p>
+            <p>Urna de cerâmica </p>
             <br>
             <p>Reprodução: Internet</p>
         </div>
@@ -92,7 +96,9 @@
     <section class="texto-sobre-historia">
         <p>Os traços da cerâmica marajoara são bastante detalhistas. Para isso, as tribos indígenas aplicavam técnicas
             que combinavam cores que tornavam as peças sofisticadas. Essas cores eram extraídas de elementos da
-            natureza, como: <br> urucum <br> caulim <br> jenipapo <br> carvão <br> fuligem </p>
+            natureza, como: <br><br> <span>urucum</span> <br> <span>caulim</span> <br> <span>jenipapo</span> <br> <span>carvão</span> <br> <span>fuligem</span> 
+    </p>
+    
     </section>
     <section class="vaso-com-rosto">
         <img src="./img/part 3.jpg" alt="vaso com rosto">
