--- a/src/paginas/comidas-tipicas.html
+++ b/src/paginas/comidas-tipicas.html
@@ -5,11 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comidas Típicas</title>
+    
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/responsive.css">
     <link rel="stylesheet" href="./comidas-tipicas.css">
-
+    <meta name="description" content="Uma plataforma dedicada ao apoio e celebração das culturas, tradições e comunidades indígenas.">
+    <meta property="og:title" content="Projeto indigena">
+    <meta property="og:description" content="Descrição do seu site aqui.">
+    <meta property="og:image" content="./src/img/logo.png">
+    <meta property="og:url" content="https://projeto-indigena.vercel.app/">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
