--- a/src/paginas/arte-indigena.html
+++ b/src/paginas/arte-indigena.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./arte-indigena.css">
     <meta name="description" content="Uma plataforma dedicada ao apoio e celebração das culturas, tradições e comunidades indígenas.">
     <meta property="og:title" content="Projeto indigena">
-    <meta property="og:description" content="Descrição do seu site aqui.">
+    <meta property="og:description" content="Uma plataforma dedicada ao apoio e celebração das culturas, tradições e comunidades indígenas.">
     <meta property="og:image" content="./src/img/logo.png">
     <meta property="og:url" content="https://projeto-indigena.vercel.app/">
 
