--- a/src/paginas/comidas-tipicas.html
+++ b/src/paginas/comidas-tipicas.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./comidas-tipicas.css">
     <meta name="description" content="Uma plataforma dedicada ao apoio e celebração das culturas, tradições e comunidades indígenas.">
     <meta property="og:title" content="Projeto indigena">
-    <meta property="og:description" content="Descrição do seu site aqui.">
+    <meta property="og:description" content="Uma plataforma dedicada ao apoio e celebração das culturas, tradições e comunidades indígenas.">
     <meta property="og:image" content="./src/img/logo.png">
     <meta property="og:url" content="https://projeto-indigena.vercel.app/">
 
