--- a/src/paginas/arte-indigena.html
+++ b/src/paginas/arte-indigena.html
@@ -96,7 +96,15 @@
     <section class="texto-sobre-historia">
         <p>Os traços da cerâmica marajoara são bastante detalhistas. Para isso, as tribos indígenas aplicavam técnicas
             que combinavam cores que tornavam as peças sofisticadas. Essas cores eram extraídas de elementos da
-            natureza, como: <br><br> <span>urucum</span> <br> <span>caulim</span> <br> <span>jenipapo</span> <br> <span>carvão</span> <br> <span>fuligem</span> 
+            natureza, como: <br><br> 
+            
+            <li>Urucum</li>
+            <li>Caulim</li>
+            <li>Jenipapo</li>
+            <li>Carvão</li>
+            <li>Fuligem</li>
+<!--             
+            <span></span> <br> <span></span> <br> <span></span> <br> <span></span> <br> <span></span>  -->
     </p>
     
     </section>
