--- a/src/paginas/arte-indigena.html
+++ b/src/paginas/arte-indigena.html
@@ -192,8 +192,10 @@
         <div class="imagem"></div>
     </section> -->
     <section class="museo-de-arte">
+       <div class="fundo">
         <h2>Acesse o site museo de arte </h2>
         <a href="https://www.tourvirtual360.com.br/mai/mai.html">Clicando aqui</a>
+       </div>
     </section>
     <footer class="rodape">
         <h2>Julia Paulino Rodrigues</h2>
