--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Uma plataforma dedicada ao apoio e celebração das culturas, tradições e comunidades indígenas.">
     <meta property="og:title" content="Projeto indigena">
     <meta property="og:description" content="Uma plataforma dedicada ao apoio e celebração das culturas, tradições e comunidades indígenas.">
-    <meta property="og:image" content="./src/img/logo.png">
+    <meta property="og:image" content="https://projeto-indigena.vercel.app/src/img/logo.png">
     <meta property="og:url" content="https://projeto-indigena.vercel.app/">
 
 
